--- a/.github/workflows/devai-review.yml
+++ b/.github/workflows/devai-review.yml
@@ -5,7 +5,7 @@ run-name: Reviewing ${{ github.actor }}'s code changes  🚀
 on: [push]
 env:
   LOCATION: us-central1
-  PROJECT_ID: genai-cicd
+  PROJECT_ID: qwiklabs-gcp-02-0a86cc66529b
 jobs:
   DevAI-Reviews:
     runs-on: ubuntu-latest
